[tool.poetry]
name = "tf2-server-stats"
version = "0.1.0"
description = "Collecting data for TF2 server stats"
authors = ["mastercoms <mastercoms@tuta.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-a2s = "^1.3.0"
aiohttp = "^3.9.5"
vdf = "^3.4"
tinydb = "^4.8.0"
geoip2 = "^4.8.0"
geopy = "^2.4.1"
brotli = "^1.1.0"
python-dotenv = "^1.0.1"
orjson = "^3.10.5"
cachetools = "^5.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
